<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".javafolder.viewviewmodel.fragments.startingfragments.collectionsstarting.CollectionsStartingFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/lorem_ipsum_size_4"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_16"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/lorem_ipsum_size_3"
        android:textColorHint="@color/hint_color"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usersInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/enter_field_color"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="7"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:layout_marginHorizontal="@dimen/margin_32"
        android:text="@string/button_text_calculate"
        app:cornerRadius="10dp"
        app:backgroundTint="@color/theme_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>