<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".javafolder.viewviewmodel.fragments.parentfragment.maps.MapsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/edit_text_hint_enter_amount"
        android:textColorHint="@color/hint_color"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="@color/hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usersInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/enter_field_color"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="9"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ToggleButton
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:textColor="@color/white"
        android:textOff="@string/button_text_start"
        android:textOn="@string/button_text_stop"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textField"
        app:layout_constraintEnd_toEndOf="@+id/textField"
        app:layout_constraintTop_toTopOf="@+id/textField" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewForBenchmarks"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:padding="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField" />

</androidx.constraintlayout.widget.ConstraintLayout>